<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="12"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/ucty_recyclerview_item_nazov_uctu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_ucty_card_nazov_uctu"
                android:textSize="30dp"
                android:gravity="left"
                android:textStyle="bold"
                android:textColor="@color/blue_800"
                android:layout_gravity="center"
                android:layout_weight="10"
                />

            <ImageButton
                android:id="@+id/ucty_recyclerview_item_je_hlavny_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_star_24"/>

            <ImageButton
                android:id="@+id/ucty_recyclerview_item_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="12"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_ucty_card_typ_uctu"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="bottom"/>

            <TextView
                android:id="@+id/ucty_recyclerview_item_typ_uctu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_gravity="bottom"
                android:text="Typ uctu"
                android:textSize="20dp"/>

            <ImageButton
                android:id="@+id/ucty_recyclerview_item_delete_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginEnd="7dp"
                app:tint="@color/red_800"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_delete_smaller"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_ucty_card_suma_na_ucte"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/ucty_recyclerview_item_zostatok_uctu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="zostatok na ucte"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_ucty_card_mena_uctu"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/ucty_recyclerview_item_mena_uctu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mena uctu"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/ucty_recyclerview_item_zaznamy_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_list"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/ucty_recyclerview_item_trvale_prikazy_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_trvaly_prikaz"
                app:tint="@color/black" />

        </LinearLayout>



    </LinearLayout>



</androidx.cardview.widget.CardView>